--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,77 +1,41 @@
 {
-  "name": "Barbearia Oficial - Sistema de Agendamento",
-  "short_name": "BarbeariaApp",
-  "description": "Sistema completo de agendamento para barbearia com gestão administrativa",
+  "name": "Barbearia Petrovick",
+  "short_name": "Petrovick",
+  "description": "Agende seu corte na Barbearia Petrovick",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait-primary",
-  "background_color": "#1F2937",
+  "orientation": "portrait",
+  "background_color": "#111827",
   "theme_color": "#EAB308",
   "scope": "/",
   "lang": "pt-BR",
-  "categories": ["business", "lifestyle", "productivity"],
+  "categories": ["business", "lifestyle", "beauty"],
   "icons": [
     {
-      "src": "/icons/icon-72x72.svg",
-      "sizes": "72x72",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-96x96.svg",
-      "sizes": "96x96",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-128x128.svg",
-      "sizes": "128x128",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-144x144.svg",
-      "sizes": "144x144",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-152x152.svg",
-      "sizes": "152x152",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-192x192.svg",
+      "src": "/icons/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icons/icon-384x384.svg",
-      "sizes": "384x384",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-512x512.svg",
+      "src": "/icons/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "screenshots": [
-    {
-      "src": "/screenshots/desktop-screenshot.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
-    },
     {
       "src": "/screenshots/mobile-screenshot.png",
       "sizes": "375x667",
       "type": "image/png",
       "form_factor": "narrow"
+    },
+    {
+      "src": "/screenshots/desktop-screenshot.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
     }
   ],
   "shortcuts": [
@@ -82,20 +46,22 @@
       "url": "/?action=book",
       "icons": [
         {
-          "src": "/icons/shortcut-book.svg",
-          "sizes": "96x96"
+          "src": "/icons/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
         }
       ]
     },
     {
       "name": "Meus Agendamentos",
-      "short_name": "Agendamentos",
+      "short_name": "Horários",
       "description": "Ver meus agendamentos",
       "url": "/?action=bookings",
       "icons": [
         {
-          "src": "/icons/shortcut-bookings.svg",
-          "sizes": "96x96"
+          "src": "/icons/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
         }
       ]
     }
